handle stream in server